# DinoJam2

./: .gitignore  Cargo.toml  Makefile.toml  README.md
dinojam2/: Cargo.toml
dinojam2/assets/: game.assets  meta.assets  ui.assets
dinojam2/assets/buildings/: test.buildings.toml
dinojam2/assets/terrain/: test.terrain.toml
dinojam2/assets/units/: test.units.toml
dinojam2/src/: client_example.rs  config.rs  debug.rs  desktop_main.rs  game.rs  lib.rs  map.rs  states.rs  util.rs
dinojam2/src/asset_management/: asset_collections.rs  mod.rs  unit_descriptors.rs
dinojam2/src/plugins/: asset_loader.rs  camera.rs  mod.rs
dinojam2/src/scenes/: game_scene.rs  main_menu_scene.rs  mod.rs  test_scene.rs  test_tile_scene.rs
server/: Cargo.toml
server/src/: main.rs
server/src/plugins/: asset_loader.rs
shared/: Cargo.toml
shared/src/: buildings.rs  lib.rs  terrain.rs  units.rs
shared/src/asset_management/: building_descriptors.rs  mod.rs  terrain_descriptors.rs  unit_descriptors.rs
shared/src/hex/: mod.rs  neighbors.rs
