[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
bevy = { version = "0.8.0", features = ["dynamic"], default-features = false }

[dependencies]
shared = { path = "../shared" }
bevy = { version = "0.8.0", default-features = false }
bevy_renet = "0.0.5"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.1"
renet = "0.0.9"
log = "0.4"
env_logger = "0.9.0"

