[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dinojam2-server"
path = "src/main.rs"

[dev-dependencies]
bevy = { version = "0.8.0", features = ["dynamic"], default-features = false }

[dependencies]
shared = { path = "../shared" }
bevy = { version = "0.8.0", default-features = false }
bevy_renet = "0.0.5"
serde = { version = "1", features = ["derive"] }
bincode = "1.3.1"
renet = "0.0.9"
log = "0.4"
env_logger = "0.9.0"

iyes_loopless = "0.7.1"
iyes_progress = { version = "0.5.0", features = ["iyes_loopless"] }
bevy_common_assets = { version = "0.3.0", features = ["ron", "toml"] }

[dependencies.bevy_asset_loader]
version = "0.12.1"
features = [
    "2d",
    "dynamic_assets",
    "stageless",
    "progress_tracking",
    "progress_tracking_stageless",
]
