[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
bevy = { version = "0.8.0", features = ["dynamic"], default-features = false }

[dependencies]
bevy = { version = "0.8", default-features = false }
bevy_renet = "0.0.5"
serde = { version = "1", features = ["derive"] }
serde-big-array = "0.4.1"
serde_json = "1.0"
