[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
bevy = { version = "0.8.0", features = ["dynamic"], default-features = false }

[dependencies]
bevy = { version = "0.8", default-features = false }
bevy_renet = "0.0.5"
bevy_ecs_tilemap = "0.8.0"

serde = { version = "1", features = ["derive"] }
serde-big-array = "0.4.1"
serde_json = "1.0"

[dependencies.bevy_asset_loader]
version = "0.12.1"
features = [
    "2d",
    "dynamic_assets",
    "stageless",
    "progress_tracking",
    "progress_tracking_stageless",
]
